# erato

./: Cargo.toml  better-auth-axum.db
backend/: Cargo.toml  better-auth-axum.db
backend/src/: auth.rs  lib.rs  main.rs  state.rs
frontend/: Cargo.toml
frontend/Erato/Erato/: ContentView.swift  EratoApp.swift
frontend/Erato/Erato.xcodeproj/: project.pbxproj
frontend/Erato/Erato.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
frontend/Erato/Erato.xcodeproj/project.xcworkspace/xcuserdata/christianbelloni.xcuserdatad/: UserInterfaceState.xcuserstate
frontend/Erato/Erato.xcodeproj/xcuserdata/christianbelloni.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
frontend/Erato/EratoTests/: EratoTests.swift
frontend/Erato/EratoUITests/: EratoUITests.swift  EratoUITestsLaunchTests.swift
