[package]
name = "erato"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros", "http2", "ws"] }
better-auth = { git = "https://github.com/better-auth-rs/better-auth-rs.git", branch = "v1", features = ["axum", "seaorm2"] }
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full", "tracing"] }
tower-http = { version = "0.6.11", features = ["trace", "cors"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

